ci: allow to update to semantic-release 15.9 but not 16.10
See issue Updater/semantic-release-monorepo#65.

--- a/renovate.json
+++ b/renovate.json
@@ -17,7 +17,7 @@
     },
     {
       "packageNames": ["semantic-release"],
-      "allowedVersions": "<= 15.6.3 || >= 16"
+      "allowedVersions": "< 15.10"
     }
   ]
 }
